# game_manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  entrypoint.sh  env_settings.py  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  settings.py
.github/workflows/: pre-commit.yml
apps/games/: admin.py  apps.py  enums.py  forms.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/games/management/commands/: generate_fixtures.py
apps/games/migrations/: 0001_initial.py  0003_remove_customuser_company_remove_customuser_groups_and_more.py  0004_alter_gamesession_participants_and_more.py
apps/games/tests/: conftest.py  factories.py  test_tasks.py
apps/users/: admin.py  apps.py  enums.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/static/users/css/: auth.css
apps/users/static/users/js/: register.js
apps/users/templates/users/: register.html  register_success.html
apps/users/tests/: conftest.py  factories.py  test_auth.py
config/: celery.py  logger.py  settings.py  urls.py
core/: logger.py  settings.py
game_management/: asgi.py  celery.py  settings.py  urls.py
games/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
games/management/commands/: generate_fixtures.py  init_roles.py
games/migrations/: 0001_initial.py  0002_alter_company_options_alter_customuser_options_and_more.py  0002_company_alter_gameresults_status_participant.py
games/templates/games/: register.html  register_success.html
games/tests/: conftest.py  test_tasks.py
