[tool.poetry]
name = "gamemanager"
version = "0.1.0"
description = ""
authors = ["Yevhenii Melnykov <yevhenii.melnykov@codeit.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
loguru = "^0.7.3"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
psycopg = {extras = ["binary"], version = "^3.2.6"}
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.10.0"
pytest-cov = "^6.0.0"
ruff = "^0.11.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".env",
  "env",
  "venv",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403"]
