[project]
name = "gamemanager"
version = "0.1.0"
description = ""
authors = [
    { name = "Yevhenii Melnykov", email = "yevhenii.melnykov@codeit.local" }
]
readme = "README.md"
dependencies = [
    "django>=5.1.7",
    "djangorestframework>=3.15.2",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "loguru>=0.7.3",
    "redis>=5.2.1",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.6",
    "djangorestframework-simplejwt>=5.5.0",
    "rest-framework-simplejwt>=0.0.2",
    "uvicorn[standard]>=0.29.0"
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "pre-commit>=4.2.0"
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".env",
    "env",
    "venv",
    ".venv"
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403"]
